<resources>
    <string name="app_name">诗词APP</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_main_fragment">首页</string>
    <string name="title_study_fragment">学习</string>
    <string name="title_dialog_fragment">对王之王</string>
    <string name="title_test_fragment">测试</string>
    <string name="title_personal_fragment">个人中心</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="remember_pwd">记住密码</string>
    <string name="password">密码</string>
    <string name="password_hint">请输入密码</string>
    <string name="user_name">用户名</string>
    <string name="user_name_hint">请输入用户名</string>
    <string name="confirm">确认密码</string>
    <string name="confirm_hint">请再次输入密码</string>
    <string name="register_now">立即注册</string>
    <string name="primary">小学</string>
    <string name="middle">初中</string>
    <string name="high">高中</string>
    <string name="random">随机</string>
    <string name="choose_question">选择题</string>
    <string name="ture_or_false_question">判断题</string>
    <string name="start_test">开始测试</string>
    <string name="entering">对方正在输入中......</string>
    <string name="dialog_name">和你对句的AI</string>
    <string name="explain">解析：\n</string>
    <string name="num">道</string>
    <string name="correct">正确：</string>
    <string name="mistakes">错误：</string>
    <string name="rate">正确率：</string>
    <string name="rate_sigh">%</string>

</resources>